# agent-web-search

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  README.zh-CN.md  agent-web-search.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
.scratch/: py-ticket-01.md  py-ticket-02.md  py-ticket-03.md  py-ticket-04.md  py-ticket-05.md  py-ticket-06.md  searx-sample.json  spec-body.md  ticket-01.md  ticket-02.md  ticket-03.md  ticket-04.md  ticket-05.md  ticket-06.md  ticket-07.md  ticket-08.md
docs/adr/: 0001-search-source-architecture.md  0002-implementation-language.md  0003-content-extraction-library.md  0004-mcp-startup-stability.md  0005-output-schema-favicon-sitename.md  0006-switch-to-python-ddgs-pyinstaller.md  0007-tool-description-guides-keyword-queries.md
scripts/: smoke_test.py
src/: config.rs  extract.rs  fanout.rs  main.rs  mcp.rs  search.rs  sources.rs
src/agent_web_search/: __init__.py  __main__.py  extract.py  orchestrate.py  search.py  server.py
tests/: mcp_stdio.rs  test_extract.py  test_mcp_stdio.py  test_orchestrate.py  test_search.py
