[package]
name = "agent-web-search"
version = "0.1.0"
edition = "2024"
description = "A free, unlimited, stable web-search MCP tool for coding agents"
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
readabilityrs = "0.1.3"
dirs = "6.0.0"
async-trait = "0.1.89"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
