[project]
name = "agent-web-search"
version = "0.2.1"
description = "A free, unlimited, stable web-search MCP tool for coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "ddgs>=9.0",
    "readability-lxml>=0.8",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.scripts]
agent-web-search = "agent_web_search.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_web_search"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit the real network (skipped in CI by default; run locally with a bare `python -m pytest`)",
]
